# Data-analysis

./: Clustering.py  DataCleaning.py  Perceptron.py  README.md
CNN/: CNN.py  zweites_script.py
Clustering/: Clustering.py
DataCleaning/: DataCleaning.py  bike_sales_clean.csv  uncleaned2_bike_sales.csv
Perceptron/: Perceptron.py
Projektarbeit/: Parameter_Dokumentation.txt  README.md  cnn_projekt.py  pyproject.toml
Unstructured Data/: Unstructured_Data.py  project.toml
